[gd_scene load_steps=3 format=3 uid="uid://bknhkp6nqfib0"]

[ext_resource type="PackedScene" uid="uid://utujl3ay3qm6" path="res://Dragon Game Template/Components/Control/Setting Widget/dragon_setting_base.tscn" id="1_oo8wa"]
[ext_resource type="Script" path="res://Dragon Game Template/Components/Control/Setting Widget/H Slider/setting_widget_h_slider.gd" id="2_22bdw"]

[node name="SettingWidgetHSlider" node_paths=PackedStringArray("spin_box", "slider", "focus_me_node", "pass_focus_up", "pass_focus_right", "pass_focus_down", "pass_focus_left") instance=ExtResource("1_oo8wa")]
custom_minimum_size = Vector2(256, 128)
anchor_right = 0.31875
anchor_bottom = 0.254167
offset_right = -280.0
offset_bottom = -54.9998
size_flags_horizontal = 3
script = ExtResource("2_22bdw")
spin_box = NodePath("MarginContainer/VBoxContainer/InfoContainer/SpinBox")
slider = NodePath("MarginContainer/VBoxContainer/HSlider")
focus_me_node = NodePath("MarginContainer/VBoxContainer/HSlider")
pass_focus_up = [NodePath("MarginContainer/VBoxContainer/InfoContainer/SpinBox"), NodePath("MarginContainer/VBoxContainer/HSlider")]
pass_focus_right = [NodePath("MarginContainer/VBoxContainer/ButtonContainer/DefaultButton")]
pass_focus_down = [NodePath("MarginContainer/VBoxContainer/ButtonContainer/DefaultButton")]
pass_focus_left = [NodePath("MarginContainer/VBoxContainer/ButtonContainer/DefaultButton")]

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]
layout_mode = 2
alignment = 1

[node name="InfoContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoContainer" index="0"]
layout_mode = 2
text = "- Sex Quantities: "

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/InfoContainer" index="1"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../../HSlider")
focus_next = NodePath("../../HSlider")
mouse_default_cursor_shape = 9
value = 20.0
select_all_on_focus = true

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ButtonContainer/DefaultButton")
focus_next = NodePath("../ButtonContainer/DefaultButton")
focus_previous = NodePath("../InfoContainer/SpinBox")
mouse_default_cursor_shape = 10
value = 20.0
tick_count = 5
ticks_on_borders = true

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="2"]
layout_mode = 2
alignment = 1

[node name="DefaultButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../HSlider")
focus_previous = NodePath("../../HSlider")
mouse_default_cursor_shape = 2
text = "key_default"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/DefaultButton" to="." method="_on_default_button_pressed"]
